objects/Finance_Request__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalNotes__c</fullName>
        <label>Additional Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Incentive_Description__c</fullName>
        <inlineHelpText>Description or more information on any additional incentive rate structures</inlineHelpText>
        <label>Utility Rate ($/kWh)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate_Fee__c</fullName>
        <formula>Pricing_Request__r.Affiliate_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Affiliate Fee from Pricing Request</inlineHelpText>
        <label>Affiliate Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Utility_Escalation__c</fullName>
        <inlineHelpText>Current utility escalation rate</inlineHelpText>
        <label>Annual Utility Escalation</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessed_Taxes_Escalator__c</fullName>
        <label>Assessed Taxes Escalator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assessed_Taxes__c</fullName>
        <inlineHelpText>Total assessed value $$ amount</inlineHelpText>
        <label>Assessed Taxes ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrego_PPA_Notes__c</fullName>
        <label>Borrego PPA Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Close Date from the Opportunity- Date the Contract is or will be signed</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_per_DC_Watt_ASP__c</fullName>
        <inlineHelpText>Total cost of EPC to the project per watt DC</inlineHelpText>
        <label>All-In EPC Cost per DC Watt</label>
        <precision>11</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Rating_Agency__c</fullName>
        <label>Credit Rating Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Moody&apos;s</fullName>
                </value>
                <value>
                    <fullName>S&amp;P</fullName>
                </value>
                <value>
                    <fullName>D&amp;B</fullName>
                </value>
                <value>
                    <fullName>Fitch</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Request_Submitted_for_Approval__c</fullName>
        <label>Date Request Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete_Request__c</fullName>
        <formula>Approval_Date__c -  Date_Request_Submitted_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>autocalculates # of calendar days between date request was approved and date request was submitted for approval</inlineHelpText>
        <label>Days to Complete Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decommissioning_Amount_Estimate__c</fullName>
        <inlineHelpText>The present value of the decommissioning estimates approved by the town</inlineHelpText>
        <label>Decommissioning Amount Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decommissioning_Bond_Type__c</fullName>
        <inlineHelpText>Choose the type of decommissioning bond</inlineHelpText>
        <label>Decommissioning Bond Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPC_DCOGS_w__c</fullName>
        <formula>EPC_DCOGs_Stamp__c / System_Size_DC_watts_from_PR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EPC DCOGs from Opportunity / System Size from Pricing Request</inlineHelpText>
        <label>EPC DCOGS $/w</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_DCOGs_Stamp__c</fullName>
        <inlineHelpText>EPC DCOGs from Opportunity</inlineHelpText>
        <label>EPC DCOGs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Price_Watt__c</fullName>
        <inlineHelpText>Entered by Project Finance</inlineHelpText>
        <label>Total Value $/w</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Price_at_Minimum_Hurdle__c</fullName>
        <label>EPC Price at Minimum Hurdle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESD_Block__c</fullName>
        <label>ESD Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESD_Duration__c</fullName>
        <label>ESD Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESD_Term__c</fullName>
        <label>ESD Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESD_kWh__c</fullName>
        <label>ESD $/kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESD_kw__c</fullName>
        <label>ESD kw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_AC_or_DC_Stamp__c</fullName>
        <inlineHelpText>ESS AC or DC from related Opportunity</inlineHelpText>
        <label>ESS AC or DC?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_In_Service_Date__c</fullName>
        <inlineHelpText>Estimated date system will be turned on and in service</inlineHelpText>
        <label>Estimated In-Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate_Amount__c</fullName>
        <formula>Opportunity__r.Expected_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Rebate amount listed on the Opportunity</inlineHelpText>
        <label>Expected Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Size_usable_sq_ft__c</fullName>
        <label>Facility Size (usable sq/ft)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_ITC__c</fullName>
        <label>Grant/ITC %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hurdle_Rate__c</fullName>
        <inlineHelpText>Minimum IRR required for project approval – see PPA Notes for details</inlineHelpText>
        <label>Hurdle Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <inlineHelpText>Provide REC, Rebates, PBI&apos;s, Bulk Incentives, and battery incentives</inlineHelpText>
        <label>Primary Incentive Rate and Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ineligible_Interconnection_EPC_watt__c</fullName>
        <inlineHelpText>Amount per DC watt for interconnection expenses which are NOT eligible for ITC basis-Any expense which is not related to &apos;generation assets not owned by GLC&apos; prior to the point of common coupling. Ex: we are paying for the equipment but utility owns it</inlineHelpText>
        <label>Ineligible Interconnection EPC $/watt</label>
        <precision>11</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Install_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Upgrades__c</fullName>
        <formula>Pricing_Request__r.Utility_Upgrades__c</formula>
        <inlineHelpText>Utility Upgrade costs from related Pricing Request</inlineHelpText>
        <label>Interconnection Upgrades ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsSubmittedForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmittedForApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>TEXT ( Opportunity__r.Job_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Escalator__c</fullName>
        <inlineHelpText>Annual escalation applied to Yr1 site lease payment for term of lease</inlineHelpText>
        <label>Lease Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Payment__c</fullName>
        <inlineHelpText>This number should always be in a $/MW-DC/year format.</inlineHelpText>
        <label>Lease Payment ($/MW-DC/year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Property_Tax_Treatment__c</fullName>
        <inlineHelpText>Description of local property tax requirement</inlineHelpText>
        <label>Local Property Tax Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIPA_Contract_Value__c</fullName>
        <inlineHelpText>Manually entered by Project Finance</inlineHelpText>
        <label>MIPA Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIPA_Contract_Value_w__c</fullName>
        <formula>IF(
 Opportunity__r.RecordTypeId = &quot;012340000007n0e&quot; ,
 MIPA_Contract_Value__c / Storage_Energy_kWh_Stamp__c,
 MIPA_Contract_Value__c / System_Size_DC_watts_from_PR__c
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MIPA Contract Value / System Size DC (watts) from Pricing Request</inlineHelpText>
        <label>MIPA Contract Value $/w</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIPA_Signed_Date__c</fullName>
        <formula>Opportunity__r.MIPASignedDate__c</formula>
        <inlineHelpText>MIPA Signed Date from Opportunity</inlineHelpText>
        <label>MIPA Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Payment_1_Assumption__c</fullName>
        <inlineHelpText>Assumed mechanical completion date</inlineHelpText>
        <label>Assumed Milestone Payment 1 Date (MC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Payment_2_Assumption__c</fullName>
        <inlineHelpText>Assumed PTO date</inlineHelpText>
        <label>Assumed Milestone Payment 2 Date (PTO)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMTC_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NMTC Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Exempt_Taxes_Escalator__c</fullName>
        <label>Non Exempt Taxes Escalator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Exempt_Taxes_MW_DC_yr__c</fullName>
        <inlineHelpText>Millage rate in $1/$1000</inlineHelpText>
        <label>Non Exempt Taxes ($/MW-DC/yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_IX_Dev_Expenses_Stamp__c</fullName>
        <inlineHelpText>Non-IX Dev COGs from related Opportunity</inlineHelpText>
        <label>Non-IX Dev Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <inlineHelpText>Number of sites at the project location</inlineHelpText>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OK_to_Submit_for_Approval__c</fullName>
        <formula>IF(
 OR(
 ISBLANK( Local_Property_Tax_Treatment__c ),
 ISBLANK( Lease_Payment__c ),
 ISBLANK( Lease_Escalator__c ),
 ISBLANK( Decommissioning_Amount_Estimate__c )
 ),
(&quot;These fields are required to submit a Finance Request for approval:&quot; &amp; BR()
&amp; IF( ISBLANK( Local_Property_Tax_Treatment__c ) , &quot;Local Property Tax Description&quot; &amp; BR() , &quot;&quot; )
&amp; IF( ISBLANK( Lease_Payment__c ) , &quot;Lease Payment ($/MW-DC/year)&quot; &amp; BR() , &quot;&quot; )
&amp; IF( ISBLANK( Lease_Escalator__c ) , &quot;Lease Escalator&quot; &amp; BR() , &quot;&quot; )
&amp; IF( ISBLANK( Decommissioning_Amount_Estimate__c ) , &quot;Decommissioning Amount Estimate&quot; &amp; BR() , &quot;&quot; )
&amp; &quot;Utility Rate ($/kWh)&quot;
),
&quot;Yes&quot;
)</formula>
        <label>OK to Submit for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_M_Estimate_Storage_kWh_year__c</fullName>
        <label>O&amp;M Estimate Storage ($/kWh/year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Stage of the Opportunity</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Finance Requests</relationshipLabel>
        <relationshipName>Finance_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Option_Payment__c</fullName>
        <inlineHelpText>Payment required to acquire the option to purchase the land</inlineHelpText>
        <label>Option Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owned_or_Leased__c</fullName>
        <inlineHelpText>Is the site owned or leased?</inlineHelpText>
        <label>Owned or Leased?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPA_Agreement_Term__c</fullName>
        <inlineHelpText>Targeted years of PPA agreement (term)</inlineHelpText>
        <label>PPA Agreement Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPA_Annual_Escalation_Rate__c</fullName>
        <inlineHelpText>PPA annual escalation rate proposed by Finance Team</inlineHelpText>
        <label>PPA Annual Escalation Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPA_Price_Formula__c</fullName>
        <formula>TEXT(PPA_Price__c)</formula>
        <label>PPA Price Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPA_Price_Text__c</fullName>
        <formula>TEXT( PPA_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPA Price Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPA_Price__c</fullName>
        <inlineHelpText>PPA Price from Financing Dept</inlineHelpText>
        <label>PPA Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPA_Target_Rate__c</fullName>
        <inlineHelpText>Target rate for PPA- to be filled out by Project Developer</inlineHelpText>
        <label>PPA Target Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priced_System_Type__c</fullName>
        <formula>IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Ground&quot; ), &quot;Ground; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Roof&quot; ), &quot;Roof; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;SSS&quot; ), &quot;SSS; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Tracker&quot; ), &quot;Tracker; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Ballasted Ground&quot; ), &quot;Ballasted Ground; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Dual Use/Ag Canopy&quot; ), &quot;Dual Use/Ag Canopy; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Fixed Tilt Ground&quot; ), &quot;Fixed Tilt Ground; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Floating Solar&quot; ), &quot;Floating Solar; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Landfill&quot; ), &quot;Landfill; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Multiple&quot; ), &quot;Multiple; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Other&quot; ), &quot;Other; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Single Axis Tracker&quot; ), &quot;Single Axis Tracker; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Standalone Storage&quot; ), &quot;Standalone Storage; &quot;, &quot;&quot; )
&amp;
IF( INCLUDES( Pricing_Request__r.Priced_System_Type__c , &quot;Wind&quot; ), &quot;Wind; &quot;, &quot;&quot; )</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Request</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Pricing Request must be associated with related Opportunity</errorMessage>
            <filterItems>
                <field>Pricing_Tool_Approval__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pricing_Tool_Approval__c</referenceTo>
        <relationshipLabel>Finance Requests</relationshipLabel>
        <relationshipName>Finance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_tool_link__c</fullName>
        <inlineHelpText>Link to the Pricing Tool associated with this finance request</inlineHelpText>
        <label>Pricing Tool Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProductionModeling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Production Modeling</inlineHelpText>
        <label>Production Modeling</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>Production_Modeling__c.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Production_Modeling__c</referenceTo>
        <relationshipLabel>Finance Requests</relationshipLabel>
        <relationshipName>Finance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <inlineHelpText>State where the Project is located</inlineHelpText>
        <label>Project Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Tax_Rate__c</fullName>
        <inlineHelpText>Estimated PILOT amount in $/MW-DC/yr</inlineHelpText>
        <label>PILOT ($/MW-DC/yr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_No_Rating__c</fullName>
        <inlineHelpText>Reason there is no credit rating. Required when rating Agency is &quot;none&quot;</inlineHelpText>
        <label>Reason for No Rating</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_Program__c</fullName>
        <formula>TEXT ( Opportunity__r.Rebate_Program__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Rebate Program-  listed on the Opportunity (Incentive Rate Field)</inlineHelpText>
        <label>Primary Incentive Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Notes__c</fullName>
        <inlineHelpText>Project Finance Approval Comment</inlineHelpText>
        <label>Project Finance Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Annual_Escalation_Rate__c</fullName>
        <inlineHelpText>Targeted/Requested annual escalation rate- to be filled out by Project Developer</inlineHelpText>
        <label>Requested Annual Escalation Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Site PPA</fullName>
                </value>
                <value>
                    <fullName>On-Site UCPA</fullName>
                </value>
                <value>
                    <fullName>Off-Site UCPA Single Host</fullName>
                </value>
                <value>
                    <fullName>Off-Site UCPA Different Host</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Yield_kWh_kWp__c</fullName>
        <formula>ProductionModeling__r.Specific_Yield_kWh_kWp2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specific Yield from related Production Model</inlineHelpText>
        <label>Specific Yield ( kWh/kWp )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Utility_Rate__c</fullName>
        <formula>Opportunity__r.Rate_Schedule__c</formula>
        <label>Starting Utility Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Tax_Treatment__c</fullName>
        <label>State Tax Treatment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Energy_kWh_Stamp__c</fullName>
        <inlineHelpText>Storage Energy (kWh) from related Opportunity</inlineHelpText>
        <label>Storage Energy (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Power_kW_from_Oppty_Stamp__c</fullName>
        <label>Storage Power (kW) from Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_AC_watts_Stamp__c</fullName>
        <inlineHelpText>System Size AC from related Opportunity</inlineHelpText>
        <label>System Size AC (watts)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_DC__c</fullName>
        <inlineHelpText>System size in watts DC (DO NOT ENTER AC HERE)</inlineHelpText>
        <label>System Size DC (watts)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_DC_watts_from_PR__c</fullName>
        <formula>Pricing_Request__r.System_Size_from_Pricing_Tool__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System Size from Estimating Pricing Tool from related Pricing Request</inlineHelpText>
        <label>System Size DC (watts) from PR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_Escalator__c</fullName>
        <inlineHelpText>Estimated PILOT escalator %/yr</inlineHelpText>
        <label>Tax Rate Escalator PILOT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Termination_Values__c</fullName>
        <label>Termination Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include: On-site</fullName>
                </value>
                <value>
                    <fullName>Include: Off-site</fullName>
                </value>
                <value>
                    <fullName>Do not include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Dev_Profit_W__c</fullName>
        <formula>Total_Dev_Profit__c / System_Size_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Dev Profit / System Size</inlineHelpText>
        <label>Total Dev Profit $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dev_Profit__c</fullName>
        <formula>MIPA_Contract_Value__c  -  Interconnection_Upgrades__c - Non_IX_Dev_Expenses_Stamp__c - Affiliate_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MIPA Contract Value - Interconnection Upgrades (from Pricing Request) - Non-IX Dev COGs (from Opportunity) - Affiliate Fee (from Pricing Request)</inlineHelpText>
        <label>Total Dev Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Ineligibles__c</fullName>
        <formula>Pricing_Request__r.Ineligible_costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ineligible Costs from related Pricing Request</inlineHelpText>
        <label>Total Ineligibles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Valuation__c</fullName>
        <formula>IF(
Opportunity__r.RecordTypeId = &quot;012340000007n0e&quot; ,
EPC_Price_Watt__c * Storage_Energy_kWh_Stamp__c,
EPC_Price_Watt__c * System_Size_DC_watts_from_PR__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Value * System Size DC (watts) from Pricing Request</inlineHelpText>
        <label>Total Valuation ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>